Fix Logo on History Page and template

--- a/ig/templates/preamble.template
+++ b/ig/templates/preamble.template
@@ -8,8 +8,9 @@
       </a>
     </div>
     <div id="family-nav">
-      <a id="fhir-logo" no-external="true" href="http://hl7.dk"><img height="50" style="margin-top: 15px;" alt="HL7 Denmark" src="assets/images/fire.png"/> </a>
-        </a>
+      <a id="fhir-logo" no-external="true" href="http://hl7.dk">
+        <img height="50" alt="HL7 Denmark" src="assets-hist/images/fhir-logo.png" style="margin-top: 15px;"/>
+      </a>
     </div>    
     
    <div id="ig-status" style="font-size:24px;padding-top: 20px;">
